fix(text): fix truncate

--- a/src/patternfly/utilities/Text/text.scss
+++ b/src/patternfly/utilities/Text/text.scss
@@ -153,7 +153,7 @@ $pf-u-font-alignment-options: (
 
 @include pf-utility-builder($pf-u-font-alignment-options, $pf-global--breakpoint-list);
 
-.pf-u-text-truncate {
+.pf-u-text-truncate > * {
   min-width: 0 !important;
   max-width: 100% !important;
   overflow: hidden !important;
